[tool.poetry]
name = "ndcc"
version = "0.1.4"
description = "tba"
authors = ["iron3oxide <jason.hottelet@gmx.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
pandas = "^1.4.3"
prompt-toolkit = "^3.0.30"

[tool.poetry.scripts]
ndcc = "ndcc.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
